# bank-support

./: .gitignore  .replit  CLAUDE.md  DEPLOYMENT.md  MODAL_DEPLOYMENT_TODO.md  README.md  bank_support_evals.py  bank_support_example.py  build.sh  debug_logfire.py  demo_evals.py  linkedin_article.md  main.py  manual_smoke_check.py  master-prompt.md  modal_app.py  pyproject.toml  replit.md  requirements.txt  smoke_test.sh  start_local.sh  test_bank_support_api.py  test_local.sh  test_logfire.py  test_modal_chat.py  test_request_mapper.py  validate_api_integration.py
app/: main.py  main_backup.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: FloatingComposer.tsx  chat-input.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/: badge.tsx
